--- a/public/manifest.json
+++ b/public/manifest.json
@@ -17,6 +17,6 @@
   "start_url": "/",
   "display": "standalone",
   "orientation": "portrait",
-  "theme_color": "#000000",
-  "background_color": "#151a2c"
+  "theme_color": "#000",
+  "background_color": "#000"
 }
