--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-loader-spinner": "^3.1.14",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.4"
+    "react-scripts": "^3.4.4",
+    "socket.io-client": "^3.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
