--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^16.13.1",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.2.2",
+    "react-icons": "^4.2.0",
     "react-loader-spinner": "^3.1.14",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
